add longBreakNavButton functionality

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 #pomodoroStopButton,
-#shortBreakStopButton {
+#shortBreakStopButton,
+#longBreakStopButton {
   display: none;
 }
 
 #pomodoroResetButton,
-#shortBreakResetButton {
+#shortBreakResetButton,
+#longBreakResetButton {
   display: none;
 }
 
