have inactive buttons match style of active button

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,8 @@
 #pomodoroNavButton {
   background-color: lightgray;
 }
+
+#shortBreakNavButton,
+#longBreakNavButton {
+  background-color: buttonface;
+}
