--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+main {
+  width: 300px;
+  margin: auto;
+  text-align: center;
+}
 #pomodoroStopButton,
 #shortBreakStopButton,
 #longBreakStopButton {
