--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,44 @@
-body {
-  font-family: 'Arial';
+* {
+  box-sizing: border-box;
 }
 
-main {
-  width: 300px;
-  margin: auto;
-  text-align: center;
+body {
+  font-family: 'Arial';
+  margin: 0;
+
+  main {
+    width: 375px;
+    margin: auto;
+    text-align: center;
+
+    h1 {
+      font-size: 42px;
+      margin-top: 3rem;
+    }
+
+    nav {
+      margin-bottom: 1rem;
+    }
+
+    .timer {
+      font-size: 72px;
+      margin-bottom: 1rem;
+    }
+
+    .timer-button {
+      background-color: buttonface;
+      width: 100px;
+    }
+  }
 }
+
+button {
+  font-size: large;
+  padding: 8px 13px;
+  border-radius: 4px;
+  border: none;
+}
+
 #pomodoroStopButton,
 #shortBreakStopButton,
 #longBreakStopButton {
@@ -17,10 +49,6 @@ main {
 #shortBreakResetButton,
 #longBreakResetButton {
   display: none;
-}
-
-.timer {
-  font-size: xx-large;
 }
 
 #shortBreakContainer,
@@ -34,9 +62,5 @@ main {
 
 #shortBreakNavButton,
 #longBreakNavButton {
-  background-color: buttonface;
-}
-
-.timer-button {
   background-color: buttonface;
 }
